--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="update index.css">
 </head>
 
 <body onscroll="showpara()">
@@ -187,3 +187,4 @@
 </body>
 
 </html>
+
