--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             let from_add = document.getElementById('from-add').value;
             let to_add = document.getElementById('to-add').value;
             let date = document.getElementById('date').value;
-            let time=document.getElementById('time').value;
+            let time=document.getElementById('timing').value;
             let description = document.getElementById('description').value;
             window.location.href = `mailto:srimoorthypackersandmovers@gmail.com?subject=booking%20vehicle&body=name%20:${cus_name}%0ADate%20:${date}%0AFrom%20:${from_add}%0ATo%20:${to_add}%0APhone%20:${con_number}%0ATIME%20:${date}%0ADescription%20:${description}`;
         }
@@ -302,5 +302,6 @@
 
     </script>
 </body>
+
 
 </html>
